--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -1,6 +1,6 @@
 ---
 title: Magpie
-dateUpdated: '2023-09-14'
+dateUpdated: '2023-12-15'
 description:
   Collection of quick notes, bookmarks and remarks for further refining and
   rethinking.
@@ -102,4 +102,9 @@ https://ru.wikipedia.org/wiki/Полдень,_XXII_век<br />
 https://ru.wikipedia.org/wiki/Жук_в_муравейнике<br />
 https://ru.wikipedia.org/wiki/Война_с_саламандрами<br />
 https://ru.wikipedia.org/wiki/Несвятые_святые<br />
-[Олег Маркеев: Неучтенный фактор](https://www.labirint.ru/books/295284/)
+<br />
+[Угроза Вторжения, Олег Маркеев](https://www.labirint.ru/books/295284/)<br />
+[Чёрная луна, Олег Маркеев](https://www.labirint.ru/books/295284/)<br />
+[Неучтенный фактор, Олег Маркеев](https://www.labirint.ru/books/295284/)<br />
+<br />
+Лезвие бритвы, Иван Ефремов
