--- a/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
+++ b/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
@@ -40,7 +40,7 @@ Two Next.js web servers are used to emulate multi-tenant deployment&nbsp;– one
 hosted via node.js and another built statically:
 
  * Next.js application for mock web site
- * Next.js static for error pages
+ * Next.js static for error page
 
 ### Installing yarn berry
 
@@ -192,7 +192,7 @@ $ yarn build
 $ yarn start
 ```
 
-### Next.js static for error pages
+### Next.js static for error page
 
 Next.js static installation instruction are the same as Next.js application
 outlined above.
