--- a/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
+++ b/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
@@ -205,6 +205,82 @@ our self-hosted site.
 
 ## Installing and Configuring Nginx
 
+```
+sudo nginx -t
+```
+
+```
+sudo nginx -t
+```
+
+```
+sudo systemctl reload nginx
+```
+
+```
+server {
+  listen 80 default_server;
+  listen [::]:80 default_server;
+
+  server_name *.artizanya.com;
+
+  return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 ssl default_server;
+  listen [::]:443 ssl default_server;
+
+  ssl_certificate /home/rh/tsl/.lego/certificates/artizanya.com.crt;
+  ssl_certificate_key /home/rh/tsl/.lego/certificates/artizanya.com.key;
+  ssl_trusted_certificate /home/rh/tsl/.lego/certificates/artizanya.com.issuer.crt;
+  include /home/rh/tsl/nginx-letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /home/rh/tsl/nginx-letsencrypt/ssl-dhparams.pem;
+
+  server_name *.artizanya.com;
+
+  root /home/rh/artizanya/packages/wui-errors/out;
+  # index index.html;
+  index 404.html;
+
+  # location / {
+  #   proxy_pass http://localhost:4000;
+  #   proxy_http_version 1.1;
+  #   proxy_set_header Upgrade $http_upgrade;
+  #   proxy_set_header Connection 'upgrade';
+  #   proxy_set_header Host $host;
+  #   proxy_cache_bypass $http_upgrade;
+  # }
+}
+
+server {
+  listen 443 ssl;
+  listen [::]:443 ssl;
+
+  ssl_certificate /home/rh/tsl/.lego/certificates/artizanya.com.crt;
+  ssl_certificate_key /home/rh/tsl/.lego/certificates/artizanya.com.key;
+  ssl_trusted_certificate /home/rh/tsl/.lego/certificates/artizanya.com.issuer.crt;
+  include /home/rh/tsl/nginx-letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /home/rh/tsl/nginx-letsencrypt/ssl-dhparams.pem;
+
+  server_name artizanya.com;
+
+  # if_modified_since off;
+  # add_header Last-Modified "";
+
+  # add_header Cache-Control no-cache;
+
+  location / {
+    proxy_pass http://localhost:3000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+}
+```
+
 ## Installing and Configuring Lego
 
  * Install and configure golang from binary distro
@@ -213,5 +289,6 @@ our self-hosted site.
 
 ## Installing and Configuring systemd Lego timer
 
+https://www.mslinn.com/blog/2022/07/08/reverse-proxy.html<br />
 https://www.mslinn.com/blog/2022/06/15/certbot.html<br />
 https://www.mslinn.com/blog/2023/03/02/lego.html
