--- a/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
+++ b/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
@@ -6,13 +6,15 @@ draft: true
 datePublished: '2023-12-03'
 dateUpdated: '2023-12-03'
 description:
-  Self-hosted wildcard DNS configuration with multiple servers on a single IP
+  Self-hosted wildcard DNS configuration example with multiple servers on a single IP
   with similar port numbers (e.g. multiple https on different subdomains) and SSL
-  termination.
-categories: [dns, wildcard, multi-tenant, ssl, tsl, dns-01, Letsencrypt, ACME, Lego]
+  termination with a single certificate for all hosted servers.
+categories: [dns, wildcard-dns, multi-tenant, ssl, tsl, dns-01, Letsencrypt, ACME, Lego]
 ---
 
-These instructions were tested on Raspberry Pi OS (64-bit), but should be
+## Priming
+
+This configuration example was tested on Raspberry Pi OS (64-bit), but should be
 compatible with any Debian-based Linux.
 
 For serving multi-tenant self-hosted applications with a single SSL certificate
@@ -34,180 +36,81 @@ Google Domains may not be used as it [will no longer
 offer](https://support.google.com/domains/answer/13689670?authuser=0&hl=en-GB)
 new domain registrations.
 
-## Installing mock web-servers
+[nginx](https://www.nginx.com/) web server is used as a reverse proxy and as SSL
+termination. [LEGO](https://github.com/go-acme/lego) (Let's Encrypt client and
+ACME library written in Go) is used to obtain SSL certificates and
+keys. [systemd
+timer](https://www.freedesktop.org/software/systemd/man/latest/systemd.timer.html)
+is used to automate SSL certificates and keys renewals before they expire.
 
-Two Next.js web servers are used to emulate multi-tenant deployment&nbsp;– one
-hosted via node.js and another built statically:
+For simplicity it is assumed that all software are running on the same server
+(Raspberry Pi in my case).
 
- * Next.js application for mock web site
- * Next.js static for error page
+## Mock web-server and error page
 
-### Installing yarn berry
+For the purpose of this SSL configuration example, it is assumed that that the
+host is already running a web-server such as Next.js at the following address:
 
-It is assumed here that [node.js](https://github.com/nvm-sh/nvm) and [yarn
-classic](https://classic.yarnpkg.com/en/docs/install) are already installed on
-the host computer. If yarn classic is not installed, run the following command
-to install it:
+[http://localhost:3000/](http://localhost:3000/)
 
-```bash
-$ npm install yarn -g
-```
-
-[corepack](https://github.com/nodejs/corepack) is required to install
-project-local [yarn berry](https://yarnpkg.com/):
-
-```bash
-$ corepack enable
-```
-
-As of the time of writing, I experienced some problems with yarn versions `4.x`,
-therefore in this post version `3.x` is used:
-
-```bash
-$ yarn set version 3.x
-```
-
-Check yarn berry release [page](https://github.com/yarnpkg/berry/releases) or
-use the following command to list available yarn berry versions:
-
-```bash
-$ git ls-remote https://github.com/yarnpkg/berry.git --tags @yarnpkg/cli/* | \
-      grep -o @yarnpkg/cli/.* | \
-      grep -o [^/]*[[:digit:]]$
-```
-
-Run the following command to install and setup a latest version of the Next.js
-application:
-
-### Installing Next.js application for mock web site
-
-```bash
-$ mkdir web-site
-$ cd web-site
-$ yarn dlx create-next-app@latest .
-```
-
-The following are the interactive prompts and possible output of the above
-`create-next-app` command:
+It is also assumed that there is a static HTML page on the host file system that
+holds page not found error:
 
 ```
-➤ YN0000: └ Completed in 1s 2ms
-➤ YN0000: ┌ Fetch step
-➤ YN0000: └ Completed
-➤ YN0000: ┌ Link step
-➤ YN0000: └ Completed
-➤ YN0000: Done in 1s 63ms
-
-✔ Would you like to use TypeScript? … No / Yes
-✔ Would you like to use ESLint? … No / Yes
-✔ Would you like to use Tailwind CSS? … No / Yes
-✔ Would you like to use `src/` directory? … No / Yes
-✔ Would you like to use App Router? (recommended) … No / Yes
-✔ Would you like to customize the default import alias (@/*)? … No / Yes
-Creating a new Next.js app in /path/to/web-site.
-
-Using yarn.
-
-Initializing project with template: app-tw
-
-
-Installing dependencies:
-- react
-- react-dom
-- next
-
-Installing devDependencies:
-- typescript
-- @types/node
-- @types/react
-- @types/react-dom
-- autoprefixer
-- postcss
-- tailwindcss
-- eslint
-- eslint-config-next
-
-➤ YN0000: ┌ Resolution step
-➤ YN0032: │ fsevents@npm:2.3.3: Implicit dependencies on node-gyp are discouraged
-➤ YN0000: └ Completed in 7s 796ms
-➤ YN0000: ┌ Fetch step
-➤ YN0013: │ wrap-ansi@npm:8.1.0 can't be found in the cache and will be fetched from the remote registry
-➤ YN0013: │ wrappy@npm:1.0.2 can't be found in the cache and will be fetched from the remote registry
-➤ YN0013: │ yallist@npm:4.0.0 can't be found in the cache and will be fetched from the remote registry
-➤ YN0013: │ yaml@npm:2.3.4 can't be found in the cache and will be fetched from the remote registry
-➤ YN0013: │ yocto-queue@npm:0.1.0 can't be found in the cache and will be fetched from the remote registry
-➤ YN0000: └ Completed in 0s 585ms
-➤ YN0000: ┌ Link step
-➤ YN0000: │ ESM support for PnP uses the experimental loader API and is therefore experimental
-➤ YN0000: └ Completed in 1s 5ms
-➤ YN0000: Done with warnings in 9s 471ms
-Initialized a git repository.
-
-Success! Created web-site at /path/to/web-site
+/path/to/errors/404.html
 ```
 
-Lock yarn berry version:
-
-```bash
-$ yarn set version 3.x
-```
-
-Many node.js packages already work with [Yarn
-Plug'n'Play](https://yarnpkg.com/features/pnp), including Next.js. However,
-there may still be packages that are conflicting with Yarn Plug'n'Play. To
-support such packages add the [following
-line](https://yarnpkg.com/configuration/yarnrc#nodeLinker) to the top of
-`/path/to/web-site/.yarnrc.yml` file:
-
-```
-nodeLinker: node-modules
-```
-
-After changing yarn configuration run install command:
-
-```
-$ yarn install
-```
-
-Add the [following
-lines](https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored)
-to `/path/to/web-site/.gitignore` file (assuming
-[zero-installs](https://yarnpkg.com/features/caching#zero-installs)):
-
-```
-.yarn/*
-!.yarn/cache
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-```
-
-The newly created `web-site` can now be build and deployed on localhost:
-
-```
-$ cd /path/to/web-site
-$ yarn build
-$ yarn start
-```
-
-### Next.js static for error page
-
-Next.js static installation instruction are the same as Next.js application
-outlined above.
-
-Then navigate browser to [http://localhost:3000/](http://localhost:3000/) and it
-should display default Next.js root index page. We are going to use this page as
-our self-hosted site.
+I might write another post on setting-up Next.js 14 as a web server and as a
+static pages generator if there is a need for such instructions.
 
 ## Configuring Router Port Forwarding
 
-## Installing and Configuring Nginx
+Port forwarding configuration depends on the Internet provider and the router
+used. In this post, it is assumed that ports `80` and `443` are forwarded to the
+similar ports and to the internal IP address that runs nginx server.
+
+
+## Installing LEGO
+
+Refer to your DNS provider documentation and to LEGO DNS Providers
+[documentation](https://go-acme.github.io/lego/dns/) to configure wildcard
+subdomain addresses DNS and to obtain API key for DNS-01 challenge.
+
+At the time of writing, LEGO is relatively new, and the versions included with
+most Linux distributions are not up-to-date with the current release. The best
+way to obtain the latest version is to compile it from the source. LEGO is
+written in Golang and requires a fairly recent version of Golang, which might
+not be available in a Linux distribution.
+
+To compile LEGO from the source, Golang can be installed from its original
+binary distribution by following the [official
+instructions](https://go.dev/doc/install).
+
+With Golang installed, LEGO can be [built and
+installed](https://go-acme.github.io/lego/installation/) with the following
+command:
 
 ```
-sudo nginx -t
+# go1.17+
+# environment variable: GO111MODULE=on
+go install github.com/go-acme/lego/v4/cmd/lego@latest
 ```
+
+## Getting SSL keys and certificates using LEGO
+
+The following command is an example of how LEGO may be used for DNS-01 challenge
+and wildcard subdomain:
+
+```
+lego --accept-tos \
+     --dns=googledomains \
+     --domains='artizanya.com' \
+     --domains='*.artizanya.com' \
+     --email='rh@artizanya.com' \
+     run
+```
+
+## Installing and Configuring Nginx
 
 ```
 sudo nginx -t
@@ -280,12 +183,6 @@ server {
   }
 }
 ```
-
-## Installing and Configuring Lego
-
- * Install and configure golang from binary distro
- * Compile and install lego
- * Use lego to obtain wildcard subdomain certificates using DNS-01 challenge
 
 ## Installing and Configuring systemd Lego timer
 
