--- a/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
+++ b/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
@@ -71,7 +71,7 @@ forwarded to the corresponding ports at the internal IP address running the
 NGINX server.
 
 
-## Installing LEGO
+## Installing and Configuring LEGO
 
 Refer to your DNS provider documentation and to [LEGO DNS Providers
 documentation](https://go-acme.github.io/lego/dns/) to configure wildcard
@@ -97,7 +97,7 @@ $ # environment variable: GO111MODULE=on
 $ go install github.com/go-acme/lego/v4/cmd/lego@latest
 ```
 
-## Getting SSL keys and certificates using LEGO
+## Getting SSL Keys and Certificates Using LEGO
 
 The following command is an example of how LEGO may be used for DNS-01 challenge
 and wildcard subdomain:
