--- a/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
+++ b/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
@@ -48,8 +48,8 @@ For simplicity it is assumed that all software are running on the same host
 
 ## Mock web-server and error page
 
-For the purpose of this SSL configuration example, it is assumed that that the
-host is already running a web-server such as Next.js at the following address:
+For the purpose of this article, it is assumed that that the host is already
+running a web-server such as Next.js at the following address:
 
 [http://localhost:3000/](http://localhost:3000/)
 
