--- a/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
+++ b/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
@@ -196,6 +196,10 @@ $ sudo systemctl reload nginx
 $ journalctl --no-pager --follow -u nginx
 ```
 
+```shell
+$ systemctl daemon-reload
+```
+
 
 ## Installing and Configuring systemd Lego timer
 
