--- a/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
+++ b/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
@@ -5,7 +5,7 @@ authors:
 datePublished: '2023-12-26'
 # dateUpdated: '2023-12-03'
 description:
-  Self-hosted wildcard DNS configuration example with multiple servers on a single IP
+  Self-hosted wildcard DNS configuration guide with multiple servers on a single IP
   with similar port numbers (e.g. multiple https on different subdomains) and SSL
   termination with a single certificate for all hosted servers.
 categories: [dns, wildcard-dns, multi-tenant, ssl, tsl, dns-01, Letsencrypt, ACME, Lego]
