--- a/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
+++ b/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
@@ -13,7 +13,7 @@ categories: [dns, wildcard-dns, multi-tenant, ssl, tsl, dns-01, Letsencrypt, ACM
 
 ## Priming
 
-This configuration example was tested on Raspberry Pi OS (64-bit), but should be
+This configuration guide was tested on Raspberry Pi OS (64-bit), but should be
 compatible with any Debian-based Linux.
 
 For serving multi-tenant self-hosted applications with a single SSL certificate
