--- a/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
+++ b/pages/blog/dns-wild-wild-card/2023-12-03.index.en.mdx
@@ -3,7 +3,7 @@ title: SSL Certificates with DNS Wild Wild Card
 authors:
   - Victor Rybynok
 datePublished: '2023-12-26'
-# dateUpdated: '2023-12-03'
+dateUpdated: '2023-12-27'
 description:
   Self-hosted wildcard DNS configuration guide with multiple servers on a single IP
   with similar port numbers (e.g. multiple https on different subdomains) and SSL
