--- a/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
+++ b/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
@@ -162,12 +162,12 @@ configuration in the future manually, I wrote a few automation
 scripts, to configure Raspberry Pi 4 to local Ethernet-over-USB gadget mode
 execute the following commands in Pi terminal:
 
-```bash
-cd
-git clone https://github.com/ramblehead/rpi4-ethernet-over-usb.git
-cd rpi4-ethernet-over-usb
-sudo ./setup-usb.sh
-sudo ./setup-dnsmasq.sh
+```shell
+$ cd
+$ git clone https://github.com/ramblehead/rpi4-ethernet-over-usb.git
+$ cd rpi4-ethernet-over-usb
+$ sudo ./setup-usb.sh
+$ sudo ./setup-dnsmasq.sh
 ```
 
 Then reboot Raspberry Pi *two times* and it should be ready to connect to any
