--- a/pages/notes/nodejs-nvm/2023-08-07.index.en.mdx
+++ b/pages/notes/nodejs-nvm/2023-08-07.index.en.mdx
@@ -14,7 +14,7 @@ To install or update nvm run the following script:
 
 ```bash
 # see https://github.com/nvm-sh/nvm for the current version
-curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.4/install.sh | bash
+curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
 ```
 
 #### References
@@ -60,5 +60,5 @@ nvm install <version>
 To select current Node.js `<version>`:
 
 ```bash
-nvm nvm use <version>
+nvm use <version>
 ```
